[gd_scene load_steps=20 format=3 uid="uid://ip63g3h7esvf"]

[ext_resource type="Script" uid="uid://y6tqjb57djnd" path="res://scenes/test_world/test_world.gd" id="1_7m0fo"]
[ext_resource type="PackedScene" uid="uid://bfnx2bl0wxtpw" path="res://entities/tree/tree.tscn" id="2_7m0fo"]
[ext_resource type="Script" uid="uid://ch27yt4mmf5ve" path="res://utils/entity_manager.gd" id="2_o30jb"]
[ext_resource type="Script" uid="uid://dscrcivvoarse" path="res://utils/tile_status_manager.gd" id="3_23qw8"]
[ext_resource type="Script" uid="uid://dteilym2orr78" path="res://camera/camera_movement.gd" id="3_f5ruf"]
[ext_resource type="Script" uid="uid://cbe52xpafdwpg" path="res://utils/input_controller.gd" id="3_xptdx"]
[ext_resource type="PackedScene" uid="uid://ce20y3t1nofib" path="res://status_effects/tile_effects/fire/fire_test.tscn" id="4_5j624"]
[ext_resource type="Script" uid="uid://b7iky5ao7qrl3" path="res://utils/world_generator.gd" id="4_f5ruf"]
[ext_resource type="Script" uid="uid://fknnyln28xqa" path="res://utils/tile_map_manager.gd" id="4_o30jb"]
[ext_resource type="Texture2D" uid="uid://bm6n1h5exu17o" path="res://addons/TiynBlocks_1.1/TinyBlock_innerLine/tinyBlocks_1.1update.png" id="5_4caup"]
[ext_resource type="PackedScene" uid="uid://c80hyne17h8bg" path="res://entities/rock/rock.tscn" id="5_y374x"]
[ext_resource type="Texture2D" uid="uid://difp5jhdwa0pm" path="res://addons/TiynBlocks_1.1/TinyBlock_innerLine/tinyBlocks.png" id="6_y374x"]
[ext_resource type="PackedScene" uid="uid://c6mtgdysg6x7h" path="res://characters/player/player.tscn" id="7_7cjmj"]
[ext_resource type="PackedScene" uid="uid://iab4qefc8cxd" path="res://entities/planter_box/planter_box.tscn" id="8_oeqk3"]
[ext_resource type="Texture2D" uid="uid://k8udox4ve3mx" path="res://tiles/18x18_grasslands_base.png" id="13_x7sl4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cnaw2"]
texture = ExtResource("5_4caup")
texture_region_size = Vector2i(18, 18)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -4)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, -4)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, -4)
0:1/0 = 0
0:1/0/texture_origin = Vector2i(0, -4)
1:1/0 = 0
1:1/0/texture_origin = Vector2i(0, -4)
2:1/0 = 0
2:1/0/texture_origin = Vector2i(0, -4)
0:2/0 = 0
0:2/0/texture_origin = Vector2i(0, -4)
1:2/0 = 0
1:2/0/texture_origin = Vector2i(0, -4)
2:2/0 = 0
2:2/0/texture_origin = Vector2i(0, -4)
0:3/0 = 0
0:3/0/texture_origin = Vector2i(0, -4)
1:3/0 = 0
1:3/0/texture_origin = Vector2i(0, -4)
2:3/0 = 0
2:3/0/texture_origin = Vector2i(0, -4)
0:4/0 = 0
0:4/0/texture_origin = Vector2i(0, -4)
1:4/0 = 0
1:4/0/texture_origin = Vector2i(0, -4)
2:4/0 = 0
2:4/0/texture_origin = Vector2i(0, -4)
0:5/0 = 0
0:5/0/texture_origin = Vector2i(0, -4)
1:5/0 = 0
1:5/0/texture_origin = Vector2i(0, -4)
2:5/0 = 0
2:5/0/texture_origin = Vector2i(0, -4)
3:0/0 = 0
3:0/0/texture_origin = Vector2i(0, -4)
3:1/0 = 0
3:1/0/texture_origin = Vector2i(0, -4)
4:1/0 = 0
4:1/0/texture_origin = Vector2i(0, -4)
4:2/0 = 0
4:2/0/texture_origin = Vector2i(0, -4)
5:2/0 = 0
5:2/0/texture_origin = Vector2i(0, -4)
5:4/0 = 0
5:4/0/texture_origin = Vector2i(0, -4)
5:5/0 = 0
5:5/0/texture_origin = Vector2i(0, -4)
4:5/0 = 0
4:5/0/texture_origin = Vector2i(0, -4)
3:5/0 = 0
3:5/0/texture_origin = Vector2i(0, -4)
3:4/0 = 0
3:4/0/texture_origin = Vector2i(0, -4)
4:4/0 = 0
4:4/0/texture_origin = Vector2i(0, -4)
4:3/0 = 0
4:3/0/texture_origin = Vector2i(0, -4)
3:3/0 = 0
3:3/0/texture_origin = Vector2i(0, -4)
3:2/0 = 0
3:2/0/texture_origin = Vector2i(0, -4)
5:1/0 = 0
5:1/0/texture_origin = Vector2i(0, -4)
5:0/0 = 0
5:0/0/texture_origin = Vector2i(0, -4)
4:0/0 = 0
4:0/0/texture_origin = Vector2i(0, -4)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kt6p6"]
texture = ExtResource("6_y374x")
texture_region_size = Vector2i(18, 18)
0:0/next_alternative_id = 2
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -4)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, -4)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, -4)
3:0/0 = 0
3:0/0/texture_origin = Vector2i(0, -4)
4:0/0 = 0
4:0/0/texture_origin = Vector2i(0, -4)
5:0/0 = 0
5:0/0/texture_origin = Vector2i(0, -4)
6:0/0 = 0
6:0/0/texture_origin = Vector2i(0, -4)
7:0/0 = 0
7:0/0/texture_origin = Vector2i(0, -4)
8:0/0 = 0
8:0/0/texture_origin = Vector2i(0, -4)
0:1/0 = 0
0:1/0/texture_origin = Vector2i(0, -4)
1:1/0 = 0
1:1/0/texture_origin = Vector2i(0, -4)
2:1/0 = 0
2:1/0/texture_origin = Vector2i(0, -4)
3:1/0 = 0
3:1/0/texture_origin = Vector2i(0, -4)
4:1/0 = 0
4:1/0/texture_origin = Vector2i(0, -4)
5:1/0 = 0
5:1/0/texture_origin = Vector2i(0, -4)
6:1/0 = 0
6:1/0/texture_origin = Vector2i(0, -4)
7:1/0 = 0
7:1/0/texture_origin = Vector2i(0, -4)
8:1/0 = 0
8:1/0/texture_origin = Vector2i(0, -4)
0:2/0 = 0
0:2/0/texture_origin = Vector2i(0, -4)
1:2/0 = 0
1:2/0/texture_origin = Vector2i(0, -4)
2:2/0 = 0
2:2/0/texture_origin = Vector2i(0, -4)
3:2/0 = 0
3:2/0/texture_origin = Vector2i(0, -4)
4:2/0 = 0
4:2/0/texture_origin = Vector2i(0, -4)
5:2/0 = 0
5:2/0/texture_origin = Vector2i(0, -4)
6:2/0 = 0
6:2/0/texture_origin = Vector2i(0, -4)
7:2/0 = 0
7:2/0/texture_origin = Vector2i(0, -4)
8:2/0 = 0
8:2/0/texture_origin = Vector2i(0, -4)
0:3/0 = 0
0:3/0/texture_origin = Vector2i(0, -4)
1:3/0 = 0
1:3/0/texture_origin = Vector2i(0, -4)
2:3/0 = 0
2:3/0/texture_origin = Vector2i(0, -4)
3:3/0 = 0
3:3/0/texture_origin = Vector2i(0, -4)
4:3/0 = 0
4:3/0/texture_origin = Vector2i(0, -4)
5:3/0 = 0
5:3/0/texture_origin = Vector2i(0, -4)
6:3/0 = 0
6:3/0/texture_origin = Vector2i(0, -4)
7:3/0 = 0
7:3/0/texture_origin = Vector2i(0, -4)
8:3/0 = 0
8:3/0/texture_origin = Vector2i(0, -4)
0:4/0 = 0
0:4/0/texture_origin = Vector2i(0, -4)
1:4/0 = 0
1:4/0/texture_origin = Vector2i(0, -4)
2:4/0 = 0
2:4/0/texture_origin = Vector2i(0, -4)
3:4/0 = 0
3:4/0/texture_origin = Vector2i(0, -4)
4:4/0 = 0
4:4/0/texture_origin = Vector2i(0, -4)
5:4/0 = 0
5:4/0/texture_origin = Vector2i(0, -4)
6:4/0 = 0
6:4/0/texture_origin = Vector2i(0, -4)
7:4/0 = 0
7:4/0/texture_origin = Vector2i(0, -4)
8:4/0 = 0
8:4/0/texture_origin = Vector2i(0, -4)
0:5/0 = 0
0:5/0/texture_origin = Vector2i(0, -4)
1:5/0 = 0
1:5/0/texture_origin = Vector2i(0, -4)
2:5/0 = 0
2:5/0/texture_origin = Vector2i(0, -4)
3:5/0 = 0
3:5/0/texture_origin = Vector2i(0, -4)
4:5/0 = 0
4:5/0/texture_origin = Vector2i(0, -4)
5:5/0 = 0
5:5/0/texture_origin = Vector2i(0, -4)
6:5/0 = 0
6:5/0/texture_origin = Vector2i(0, -4)
7:5/0 = 0
7:5/0/texture_origin = Vector2i(0, -4)
8:5/0 = 0
8:5/0/texture_origin = Vector2i(0, -4)
0:6/0 = 0
0:6/0/texture_origin = Vector2i(0, -4)
1:6/0 = 0
1:6/0/texture_origin = Vector2i(0, -4)
2:6/0 = 0
2:6/0/texture_origin = Vector2i(0, -4)
3:6/0 = 0
3:6/0/texture_origin = Vector2i(0, -4)
4:6/0 = 0
4:6/0/texture_origin = Vector2i(0, -4)
5:6/0 = 0
5:6/0/texture_origin = Vector2i(0, -4)
6:6/0 = 0
6:6/0/texture_origin = Vector2i(0, -4)
7:6/0 = 0
7:6/0/texture_origin = Vector2i(0, -4)
0:7/0 = 0
0:7/0/texture_origin = Vector2i(0, -4)
1:7/0 = 0
1:7/0/texture_origin = Vector2i(0, -4)
2:7/0 = 0
2:7/0/texture_origin = Vector2i(0, -4)
3:7/0 = 0
3:7/0/texture_origin = Vector2i(0, -4)
4:7/0 = 0
4:7/0/texture_origin = Vector2i(0, -4)
5:7/0 = 0
5:7/0/texture_origin = Vector2i(0, -4)
6:7/0 = 0
6:7/0/texture_origin = Vector2i(0, -4)
7:7/0 = 0
7:7/0/texture_origin = Vector2i(0, -4)
0:8/0 = 0
0:8/0/texture_origin = Vector2i(0, -4)
1:8/0 = 0
1:8/0/texture_origin = Vector2i(0, -4)
2:8/0 = 0
2:8/0/texture_origin = Vector2i(0, -4)
3:8/0 = 0
3:8/0/texture_origin = Vector2i(0, -4)
4:8/0 = 0
4:8/0/texture_origin = Vector2i(0, -4)
5:8/0 = 0
5:8/0/texture_origin = Vector2i(0, -4)
6:8/0 = 0
6:8/0/texture_origin = Vector2i(0, -4)
8:8/0 = 0
8:8/0/texture_origin = Vector2i(0, -4)
0:9/0 = 0
0:9/0/texture_origin = Vector2i(0, -4)
1:9/0 = 0
1:9/0/texture_origin = Vector2i(0, -4)
2:9/0 = 0
2:9/0/texture_origin = Vector2i(0, -4)
3:9/0 = 0
3:9/0/texture_origin = Vector2i(0, -4)
4:9/0 = 0
4:9/0/texture_origin = Vector2i(0, -4)
5:9/0 = 0
5:9/0/texture_origin = Vector2i(0, -4)
6:9/0 = 0
6:9/0/texture_origin = Vector2i(0, -4)
8:9/0 = 0
8:9/0/texture_origin = Vector2i(0, -4)
9:7/0 = 0
9:7/0/texture_origin = Vector2i(0, -4)
9:8/0 = 0
9:8/0/texture_origin = Vector2i(0, -4)
9:9/0 = 0
9:9/0/texture_origin = Vector2i(0, -4)
9:1/0 = 0
9:1/0/texture_origin = Vector2i(0, -4)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_oeqk3"]
resource_name = "Grasslands"
texture = ExtResource("13_x7sl4")
texture_region_size = Vector2i(18, 18)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -4)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, -4)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, -4)
3:0/0 = 0
3:0/0/texture_origin = Vector2i(0, -4)

[sub_resource type="TileSet" id="TileSet_uu1iw"]
tile_shape = 1
tile_layout = 5
tile_offset_axis = 1
tile_size = Vector2i(18, 9)
sources/0 = SubResource("TileSetAtlasSource_cnaw2")
sources/1 = SubResource("TileSetAtlasSource_kt6p6")
sources/2 = SubResource("TileSetAtlasSource_oeqk3")

[node name="TestWorld" type="Node2D"]
script = ExtResource("1_7m0fo")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
script = ExtResource("3_f5ruf")

[node name="TileStatusManager" type="Node2D" parent="."]
script = ExtResource("3_23qw8")
fire_scene = ExtResource("4_5j624")

[node name="EntityManager" type="Node2D" parent="."]
script = ExtResource("2_o30jb")
tree_scene = ExtResource("2_7m0fo")
rock_scene = ExtResource("5_y374x")
planter_scene = ExtResource("8_oeqk3")

[node name="TreeContainer" type="Node2D" parent="EntityManager"]

[node name="InputController" type="Node2D" parent="."]
script = ExtResource("3_xptdx")

[node name="WorldGenerator" type="Node2D" parent="."]
script = ExtResource("4_f5ruf")

[node name="TileMapManager" type="Node2D" parent="."]
position = Vector2(113, 118)
script = ExtResource("4_o30jb")

[node name="TerrainLayer" type="TileMapLayer" parent="TileMapManager"]
z_index = -4096
tile_set = SubResource("TileSet_uu1iw")

[node name="PropLayer" type="TileMapLayer" parent="TileMapManager"]
z_index = -4096
tile_set = SubResource("TileSet_uu1iw")

[node name="HighlightLayer" type="TileMapLayer" parent="TileMapManager"]
z_index = -4096
tile_set = SubResource("TileSet_uu1iw")

[node name="Player" parent="." groups=["Player"] instance=ExtResource("7_7cjmj")]
move_speed = 0.2
